2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 559633 – gtk_image_new_from_gicon does not always work for
	.desktop files

	* gdesktopappinfo.c (g_desktop_app_info_new_from_keyfile): Ignore
	extensions on icon names.  Proposed by Axel von Bertoldi.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 548163 – Nautilus displays wrong error message for too long file
	names

	* glocalfile.c (g_local_file_set_display_name): Correctly set
	error conditions if the new name is e.g. too long. Reported
	by Leonardo Ferreira Fontenelle.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 547481 – g_data_input_stream_read_line behaves not as stated in
	the docs

	* gdatainputstream.c (g_data_input_stream_read_line): Behave as
	documented and include the line end in the returned string.
	Pointed out by Paul Pogonyshev.

	* tests/data-input-stream.c: Fix the read_line test to test the
	documented behaviour.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 541715 – win32 : patch for warnings and signature problems in
	recent code

	* glocalvfs.c: Avoid unused variables. Pointed out by Jody Goldberg.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 562393 – g_buffered_input_stream_read_byte broken if data
	available

	* gio/gbufferedinputstream.c (g_buffered_input_stream_read_byte): Fix
	handling of buffered content.  Patch by Philip Withnall

	* gio/tests/buffered-input-stream.c: Add a testcase for this bug.
	* gio/tests/Makefile.am: And build it

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 561807 – inotify_sub.c :: dup_dirname() fails to 
	remove trailing '/'

	* inotify/inotify-sub.c (dup_dirname): Actually strip
	the trailing '/' away. Spotted by Dan Williams.


2008-11-24  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.18.3 ===

2008-11-23  Hans Breuer  <hans@breuer.org>
