@@ -1,3 +1,11 @@
+2008-12-01  Matthias Clasen  <mclasen@redhat.com>
+
+	Merged from trunk:
+
+	* gdatainputstream.c (g_data_input_stream_read_line): Revert the
+	behaviour change, and update the docs instead, to avoid breaking
+	existing users.
+
 2008-11-28  Matthias Clasen  <mclasen@redhat.com>
 
 	Merged from trunk:
